# guide-tools

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: docs-pages.yml  release.yml
.tauri/: guide-tools-updater.key.pub
docs/: deployment.md  index.md  nsis-offline.md  quick-start.md  usage.md
docs/.vitepress/: config.ts
scripts/: bump-version.ps1  setup-tauri-nsis.ps1
src/: App.css  App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  markdown.rs  oss.rs  pandoc.rs
src/components/: AppHeader.tsx  FileExplorerPage.tsx  MainContent.tsx  MarkdownEditor.tsx  MarkdownPreview.tsx  OSSConfig.tsx  copyButton.tsx  index.less
src/hooks/: useFileOperations.ts  useOSSOperations.ts  usePandoc.ts
src/utils/: configStore.ts  updateCheck.ts  updateConfig.ts
