[package]
name = "guide_tools"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "guide_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "~2.5.0", features = [] }

[dependencies]
regex = "1.5"
tauri = { version = "~2.10.0", features = [] }
tauri-plugin-opener = "~2.5.0"
tauri-plugin-shell = "~2.3.0"
tauri-plugin-dialog = "~2.6.0"
tauri-plugin-fs = "~2.4.0"
tauri-plugin-http = "~2.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = "0.12.20"
tokio = "1.45.1"
base64 = "0.22.1"
hmac = "0.12.1"
sha2 = "0.10.9"
sha1 = "0.10"
chrono = "0.4.41"
thiserror = "1.0"
tauri-plugin-store = "~2.4.0"
quick-xml = { version = "0.38.3", features = ["serialize"] }
percent-encoding = "2.3.1"
